@@ -1488,7 +1488,8 @@ managed."
 	      (wm-state (window-state win)))
 	  (unless (or (eql (xlib:window-override-redirect win) :on)
 		      (eql win *no-focus-window*)
-                      (is-notify-window-p win))
+                      (is-notify-window-p win)
+                      (never-managed-window-p win))
 	    (when (or (eql map-state :viewable)
 		      (eql wm-state +iconic-state+))
 	      (format t "Processing ~S: type=~A ~S~%" (xlib:wm-name win) (window-type win) win)
